# novice

./: .gitignore  CMakeLists.txt
.github/workflows/: liu-aarch64.yml  liu-x86_64.yml
aarch64/: abs.s  getSum.s  memset.s  qsort.s
csrc/: cqsort.cpp  cswap.cpp
include/: functions.h
tests/: main.cpp  testAbs.cpp  testGetSum.cpp  testMemset.cpp  testQuickSort.cpp
x86_64/: abs.s  getSum.s  memset.s  qsort.s
